# conceptbasis

./: .gitignore  LICENSE  README.md  pyproject.toml  reproduce.sh  requirements.txt
conceptbasis/: __init__.py  embedding.py  encoders.py  losses.py  models.py  site.py  splits.py  train.py  vlm.py
data/: README.md  attributes.jsonl  attributes_dev.jsonl  attributes_dev_vllm_gemma4_nvfp4.jsonl  attributes_dev_vllm_gemma4_nvfp4.jsonl.meta.json  attributes_train.jsonl  attributes_train_vllm_gemma4_nvfp4_open_tags_nonredundant_v8.jsonl  attributes_train_vllm_gemma4_nvfp4_open_tags_nonredundant_v8.jsonl.meta.json  captions_vllm_gemma4_nvfp4_clip_grounded_v2.jsonl  captions_vllm_gemma4_nvfp4_clip_grounded_v2.jsonl.meta.json  cc0_image_ids.json  concept_judgments.jsonl  contrastive_prompts.json  dictionary.json  dictionary_labels_cc0_dev_vllm_gemma4_nvfp4_usage_profile_v8_object_grounded_v11.jsonl  dictionary_labels_cc0_dev_vllm_gemma4_nvfp4_usage_profile_v8_object_grounded_v11.jsonl.meta.json  dictionary_labels_train_gemma26.jsonl.meta.json  dictionary_labels_train_vllm_gemma4_nvfp4_usage_profile_v8_object_grounded_v11_merged.jsonl.meta.json  dictionary_positive_only_edge_average_085.json  dictionary_positive_only_edge_average_085.provenance.json  dictionary_provenance.json  dictionary_usage_profile_v8.json  dictionary_usage_profile_v8.provenance.json  direction_sources.json  image_ids.json  splits.json
docs/: fixed-labels.html  index.html  playground-baseline.html  playground.html
research/: ARTIFACTS.md  DATA_PROTOCOL.md  README.md  related-work-splice.md
(+106 files in other folders)
