[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conceptbasis"
version = "0.1.0"
description = "Image-text embeddings with an explicit, conditionally-orthogonal concept basis (THINGS)"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["conceptbasis"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
